--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,5 +8,6 @@
         <!-- Customize your theme here. -->
         <item name="primaryTextColor">@color/white</item>
         <item name="secondaryTextColor">@color/light_grey</item>
+        <item name="neoPageTitleColor">@color/black_title</item>
     </style>
 </resources>
