--- a/app/src/main/res/layout/apod_item_view_holder.xml
+++ b/app/src/main/res/layout/apod_item_view_holder.xml
@@ -1,41 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/apodItem"
-    android:layout_width="match_parent"
+    android:id="@+id/apodRowItem"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="2dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="?primaryTextColor"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        tools:text="Asteroid" />
-
-    <TextView
-        android:id="@+id/url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="2dp"
-        android:autoLink="web"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="?secondaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        tools:text="https://someUrl.com/blablabla" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="4dp"
-        android:background="@color/light_grey" />
+    <!--include layout="@layout/apod_gallery_item_view_holder" /-->
 </LinearLayout>
