--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -2,4 +2,5 @@
 <resources>
     <attr name="primaryTextColor" format="reference|color" />
     <attr name="secondaryTextColor" format="reference|color" />
+    <attr name="neoPageTitleColor" format="reference|color" />
 </resources>
