--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="drawerArrowStyle">@style/DrawerIconStyle</item>
         <item name="primaryTextColor">@color/black</item>
         <item name="secondaryTextColor">@color/dark_grey</item>
+        <item name="neoPageTitleColor">@color/white_title</item>
     </style>
 
     <style name="Theme.NasaClient.NoActionBar">
@@ -19,6 +20,7 @@
     <style name="Theme.NasaClient.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.NasaClient.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="DrawerIconStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@color/white</item>
     </style>
