--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,17 @@
         android:id="@+id/nav_apod"
         android:name="com.agdemidov.nasaclient.ui.apod.ApodsFragment"
         android:label="@string/menu_image_of_the_day"
-        tools:layout="@layout/fragment_apod" />
+        tools:layout="@layout/fragment_apod">
+        <action
+            android:id="@+id/action_nav_apod_to_apodCardViewerFragment"
+            app:destination="@id/apodCardViewerFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_neo"
         android:name="com.agdemidov.nasaclient.ui.neo.NeoFragment"
         android:label="@string/menu_near_earth_objects"
-        tools:layout="@layout/fragment_neo" >
+        tools:layout="@layout/fragment_neo">
         <action
             android:id="@+id/action_nav_neo_to_nav_new_web_page"
             app:destination="@id/nav_new_web_page"
@@ -31,6 +35,16 @@
         <argument
             android:name="neoPageUrl"
             app:argType="string"
+            app:nullable="false" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/apodCardViewerFragment"
+        android:name="com.agdemidov.nasaclient.ui.apodcardviewer.ApodCardsCarouselFragment"
+        android:label="@string/apod_card_viewer_hardcoded_title">
+        <argument
+            android:name="currentIndex"
+            app:argType="integer"
             app:nullable="false" />
     </fragment>
 
